--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://www.flaticon.com/free-icon/tour-guide_9683128?term=travel&page=1&position=94&origin=search&related_id=9683128" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Anywhere</title>
     <link href="./src/output.css" rel="stylesheet">
   </head>
   <body>
