feat: edit website icon

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://www.flaticon.com/free-icon/tour-guide_9683128?term=travel&page=1&position=94&origin=search&related_id=9683128" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anywhere</title>
-    <link href="./src/output.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="https://github.com/ahzqr/anywhere/blob/main/assets/Icon.png?raw=true" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anywhere</title>
+  <link href="./src/output.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
